// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`If-Else should 1`] = `
<div>
  two plus two equals four
</div>
`;

exports[`Unless should 1`] = `
<div>
  <p>
    two plus two not equals five
  </p>
</div>
`;

exports[`When should 1`] = `
<div>
  <p>
    two plus two equals four
  </p>
</div>
`;
